corrected deprecated new Integer(int)